--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dialoguer = "0.9.0"
 fastrand = "1.5.0"
+indicatif = "0.16.2"
 q1tsim = "0.5.0"
 rayon = "1.5.1"
