--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "0.13"
+bincode = "1.3.3"
 csv = "1.1.6"
 dialoguer = "0.9.0"
 fastrand = "1.5.0"
 indicatif = "0.16.2"
 q1tsim = "0.5.0"
 rayon = "1.5.1"
+serde = { version = "1.0", features = [ "derive" ] }
